[workspace]
members = [
    "taxel",
    "taxel-bindings",
    "taxel-cli",
    "taxel-util",
    "taxel-xml",
]
resolver = "2"

[workspace.package]
authors = ["quambene <contact.quambene@gmail.com>"]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.71"
log = "0.4.19"
env_logger = "0.10.0"
