[workspace]
members = [
    "taxel-cli",
    "taxel-util",
    "taxel-xml",
]
resolver = "2"

[workspace.package]
authors = ["quambene <contact.quambene@gmail.com>"]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.71"
log = "0.4.19"
env_logger = "0.10.0"
serde = { version = "1.0.164", features = ["derive"] }
quick-xml = "0.29.0"
csv = "1.2.2"
spreadsheet-ods = "0.22.0"
roxmltree = "0.14.1"
clap = { version = "3.2.14", default-features = false, features = ["std", "cargo"] }
