[package]
name = "taxel-bindings"
version = "0.1.0"
authors = ["quambene <contact.quambene@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"
name = "taxel_bindings"

[dependencies]
taxel-util = { version = "0.1.0", path = "../taxel-util" }
anyhow = "1.0.58"

[build-dependencies]
bindgen = "0.60.1"
