[package]
name = "taxel-bindings"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
path = "src/lib.rs"
name = "taxel_bindings"

[dependencies]
taxel-util = { version = "0.1.0", path = "../taxel-util" }
anyhow = { workspace = true }

[build-dependencies]
bindgen = "0.60.1"
