[package]
name = "taxel-cli"
version = "0.2.0"
authors.workspace = true
edition.workspace = true

[[bin]]
path = "src/main.rs"
name = "taxel"

[features]
integration-test = []

[dependencies]
eric-sdk = "0.3.1"
taxel-xml = { version = "0.1.0", path = "../taxel-xml" }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true, default-features = false, features = ["std", "cargo"] }

[dev-dependencies]
taxel-xml = { version = "0.1.0", path = "../taxel-xml" }
