[package]
name = "taxel-cli"
version = "0.2.0"
authors.workspace = true
edition.workspace = true

[[bin]]
path = "src/main.rs"
name = "taxel"

[features]
integration-test = []

[dependencies]
eric-sdk = { workspace = true }
taxel = { version = "0.1.0", path = "../taxel" }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true, default-features = false, features = ["std", "cargo"] }

[dev-dependencies]
taxel = { version = "0.1.0", path = "../taxel" }
