
[project]
name = "taxel-py"
version = "0.0.1"
authors = [
    {name = "quambene", email = "contact.quambene@gmail.com"},
]

[tool.pytest.ini_options]
markers = ["unit", "integration"]
pythonpath = [
  "src/"
]
testpaths = "src/xsd_to_xml.py"
addopts = [
    "--import-mode=importlib",
]

[tool.poetry]
name = "taxel-py"
version = "0.0.1"
description = "Convert xsd to xml"
authors = ["quambene <contact.quambene@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^5.2.2"
xmlschema = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
