[package]
name = "taxel-xml"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
name = "taxel_xml"

[dependencies]
anyhow = { workspace = true }
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"]}
quick-xml = "0.29.0"
csv = "1.2.2"
spreadsheet-ods = "0.15.0"
