[package]
name = "taxel-xml"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
name = "taxel_xml"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
quick-xml = { workspace = true }
csv = { workspace = true }
spreadsheet-ods = { workspace = true }
